[package]
name          = "find"
version       = "0.0.1"

description   = """Provides the trait Find and implementations for it."""
keywords      = ["search", "find", "substring", "pattern", "no_std"]
categories    = ["algorithms", "no-std"]

authors       = ["Mazdak Farrokhzad <twingoow@gmail.com>"]
license       = "MIT/Apache-2.0"
repository    = "https://github.com/Centril/find"
documentation = "https://docs.rs/find/"
readme        = "README.md"

[dependencies]

[dev-dependencies]